--- a/css/style.css
+++ b/css/style.css
@@ -1633,6 +1633,10 @@ body.mobile-nav-active #mobile-nav-toggle {
     font-size: 34px;
   }
 
+  #intro h2 {
+    font-size: 24px;
+  };
+
   #intro p {
     font-size: 16px;
   }
